# Hybrid-Quantum-Neural-Network-Analysis

./: README.md  pyproject.toml  requirements.txt
.aqora/: config.toml
.aqora/data/: use_case.toml
.aqora/last_run/: 0.msgpack  1.msgpack  2.msgpack
experiments/: Amplitude_Embedding.ipynb  Quanvolution.ipynb  View_results.ipynb
experiments/Saved_models/: Parallel_quantum.json  Parallel_quantum_testset.json  Quanvolution.json  Quanvolution_testset.json  Resnet.json
submission/: Amplitude_Embedding.ipynb  Basic_HQNN vs CNN.ipynb  Parallel pathing CNN+HQNN.ipynb  Parallel_quantum_model.ipynb  Quanvolution.ipynb  Resnet.ipynb
submission.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
submission/Saved_models/: Parallel_quantum.pth  Quanvolution.pth  Resnet_testset.json
